test_files/s_cproc/include/test_003/e_expect.output
/home/jason/github/stupid_lib/test_files/s_cproc/include/test_003/i.input:1:9: warning: missing terminating " character
 #include"include.input
         ^
/home/jason/github/stupid_lib/test_files/s_cproc/include/test_003/i.input:1:9: error: #include expects "FILENAME" or <FILENAME>
 #include"include.input
         ^
